# .emacs.d

./: .gitignore  bookmarks  clang-format  dependencies.sh  early-init.el  editor.org  emacs-nw.zsh  emacs.zsh  emacs_server.zsh  init.el  init.org  make_install_emacs.sh  org-theme.setup  org.org  programming.org  templates.org  todo.org
project-skeletons/basic-cpp/: CMakeLists.txt  README.md
project-skeletons/basic-cpp/src/: main.cpp
project-skeletons/full-cpp/: README.md
snippets/org-mode/: plantuml
snippets/skeletons/: skel.c  skel.cpp  skel.h  skel.py  skel.readme  skel.sh
